--- a/style.css
+++ b/style.css
@@ -7,5 +7,158 @@
     padding:0;
 }
 
-/* Fill your code*/
+body{
+    background-color: rgb(136, 74, 136);
+}
 
+#head{
+  height:120px;
+  background-color:rgb(77, 45, 45) ;
+
+}
+#container{
+    margin-left: 650px;
+    text-align: center;
+    width:200px;
+    background-color: black;
+    border-radius: 50%;
+}
+
+#container3{
+    margin-top: 100px;
+    margin-left: 150px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+}
+
+#container2{
+margin-right: 110px;
+margin-top: 30px;
+
+}
+
+#dp{
+    text-align: center;
+  color: white;
+  
+}
+#dp1{
+    display: grid;
+margin-left: 90px;
+background-repeat: no-repeat;
+padding: 35px;
+background-size: contain;
+width:300px;
+height:200px;
+background-origin: content-box;
+}
+
+#dp2{
+    display: grid;
+    background-repeat: no-repeat;
+    padding: 35px;
+    background-size: contain;
+    width:300px;
+    height:200px;
+    background-origin: content-box;
+    }
+
+#menu{
+margin-right: 100px;
+   margin-top: 40px;
+   font-size: 15px;
+
+}
+
+#container1{
+    /* margin-left: 50px; */
+    margin-bottom: 150px;
+    width: 200px;
+    height: 220px;
+    margin: 50px;
+    text-align: center;
+    display: grid;
+    align-content: flex-end;
+}
+
+#btn{
+    width: 1485px;
+    /* height: 100px; */
+    background-color: rgb(77, 45, 45);
+margin-top: 60px;
+height: 100px;
+padding: 25px 25px 25px 25px;
+margin-bottom: 2px;
+
+}
+
+.flavour{
+    padding: 10px;  
+    border-radius: 10px;
+    font-size: 15px;
+    margin-top: 30px;
+    cursor: pointer;
+    background-color:rgb(136, 74, 136) ;
+    color: white;
+}
+
+#choc{
+    margin-left: 150px;
+}
+#straw{
+    margin-left: 150px;
+}
+
+#butter{
+    margin-left: 150px;
+}
+
+#vanni{
+    margin-left: 150px;
+}
+
+#red{
+    margin-left: 150px;
+}
+
+#buy{
+    margin-left: 150px;
+}
+
+
+
+#layer1{
+    width:210px;
+    background: rgb(145, 65, 8);
+    visibility: hidden;
+}
+#layer2{
+    background: #f0306d;
+    width:180px;
+    margin-left: 12px;
+    visibility: hidden;
+}
+#layer3{
+    background: #f1952b;
+    width: 150px;
+    margin-left: 25px;
+    visibility: hidden;
+}
+#layer4{
+    background: #eee3ba;
+    width: 120px;
+    margin-left: 40px;
+    visibility: hidden;
+}
+#layer5{
+    background: #c23d3d;
+    width: 90px;
+    margin-left: 55px;
+    visibility: hidden;
+}
+
+#image{
+    visibility: hidden;
+   margin-left: 80px;
+}
